--- a/style.css
+++ b/style.css
@@ -60,34 +60,126 @@ h1 {
     vertical-align: middle;
 }
 
-.sidebar .library {
-    background-color: #121212;
+.library {
+    background: #121212;
     border-radius: 8px;
-    padding: 16px;
     display: flex;
     justify-content: space-between;
-}
-
-.sidebar .library a {
+    flex-direction: column;
+    padding: 4px 8px;
     color: #b3b3b3;
-    text-decoration: none;
     font-weight: 600;
-    font-size: 16px;
-    font-family: "DM Sans", sans-serif;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.library .library__content {
     display: flex;
-    gap: 12px;
+    justify-content: space-between;
+
 }
 
-.sidebar .library a span {
-    line-height: 1.5;
-    display: inline-block;
-    vertical-align: middle;
+.library .library__button {
+    display: flex;
+    margin-right: 10px;
+    color: #b3b3b3;
+    background: transparent;
+    border: 0;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 20px 10px;
 }
 
-.sb-icon {
-    width: 18px;
-    height: auto;
-    fill: #b3b3b3;
-    display: inline-block;
-    vertical-align: middle;
+.library .library__button .fa {
+    font-size: 20px;
+    margin-right: 10px;
+    padding-right: 8px;
+}
+
+.library .library__content .fa-plus {
+    margin: 24px 10px;;
+}
+
+.section-playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+.section-playlist .section-playlist__content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist .section-playlist__content .text {
+    padding-bottom: 14px;
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+}
+
+.section-playlist .section-playlist__content .title {
+    font-weight: 700;
+}
+
+.section-playlist .section-playlist__content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist .section-playlist__content .section-playlist__button {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    margin-top: 12px;
+    border: 0;
+    width: 113px;
+}
+
+.sidebar .cookies {
+    margin: 25px 20px;
+
+}
+
+.sidebar .cookies a {
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+.sidebar .languages__button {
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: #fff;
+    cursor: pointer;
+    align-items: center;
+    font-weight: 700;
+    width: 170px;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 20px;
 }
