--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #000
+    background-color: #000;
+    font-family: var(--font-dm-sans);
 }
 
 h1 {
@@ -21,7 +22,7 @@ h1 {
 .sidebar__navigation {
     background-color: #121212;
     border-radius: 8px;
-    padding: 16px 0 0 16px; /* todo: tentar deixar só com dois elementos */ 
+    padding: 16px 0 0 16px;
 }
 
 .sidebar__navigation .logo {
@@ -49,7 +50,6 @@ h1 {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
     display: flex;
     gap: 8px;
 }
@@ -87,7 +87,6 @@ h1 {
     border: 0;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -126,7 +125,6 @@ h1 {
 .section-playlist .section-playlist__content .text {
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist .section-playlist__content .title {
@@ -146,7 +144,6 @@ h1 {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
